mws30(fix): More space on mobile

--- a/apps/mws30/src/app/game-models/notepad/notepad.component.scss
+++ b/apps/mws30/src/app/game-models/notepad/notepad.component.scss
@@ -10,7 +10,7 @@
   min-height: 40px;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 0.1em;
 
   .player-name {
     display: grid;
